[package]
name    = "ross"
version = "0.1.6"
authors = ["Lee Katz <gzu2@cdc.gov>"]
license = "LICENSE"
description = "A set of scripts to run basic analysis on fastq files"
documentation = "https://github.com/lskatz/ROSS.rs/blob/master/README.md"
repository = "https://github.com/lskatz/ROSS.rs"

[[bin]]
name = "friends_replace"
path = "src/bin/friends_replace.rs"

[[bin]]
name = "friends_regex"
path = "src/bin/friends_regex.rs"

[[bin]]
name = "friends_quality_filter"
path = "src/bin/friends_quality_filter.rs"

[[bin]]
name = "friends_trimmer"
path = "src/bin/friends_trimmer.rs"

[[bin]]
name = "friends_emma"
path = "src/bin/friends_emma.rs"

[[bin]]
name = "friends_chandler"
path = "src/bin/friends_chandler.rs"

[[bin]]
name = "friends_ung"
path = "src/bin/friends_ung.rs"

[[bin]]
name = "friends_carol"
path = "src/bin/friends_carol.rs"

[[bin]]
name = "friends_rachel"
path = "src/bin/friends_rachel.rs"

[[bin]]
name = "friends_monica"
path = "src/bin/friends_monica.rs"

[[bin]]
name = "friends_joey"
path = "src/bin/friends_joey.rs"

[[bin]]
name = "friends_phoebe"
path = "src/bin/friends_phoebe.rs"

[[bin]]
name = "friends_ursula"
path = "src/bin/friends_ursula.rs"

[[bin]]
name = "friends_gunther"
path = "src/bin/friends_gunther.rs"

[dependencies]
regex = "0.2.10"
getopts = "0.2"
statistical = "0.1.1"
multiqueue = "0.3.2"
rand = "0.4"


