[package]
name    = "fasten"
version = "0.8.3"
authors = ["Lee Katz <gzu2@cdc.gov>"]
#license-file  = "LICENSE"
license       = "MIT"
description   = "A set of scripts to run basic analysis on fastq files"
documentation = "https://github.com/lskatz/fasten/blob/master/README.md"
repository    = "https://github.com/lskatz/fasten"
categories    = ["command-line-utilities", "science"]
keywords      = ["bioinformatics","fastq","streaming"]
readme        = "./README.md"
exclude = [
    # Docs have been copied over for the purposes of github pages
    # and should not be included in the package
    "docs/*",
    # Do not include the manuscript in the package
    "paper/*",
]

[[bin]]
name = "fasten_replace"
path = "src/bin/fasten_replace.rs"

[[bin]]
name = "fasten_mutate"
path = "src/bin/fasten_mutate.rs"

[[bin]]
name = "fasten_regex"
path = "src/bin/fasten_regex.rs"

[[bin]]
name = "fasten_quality_filter"
path = "src/bin/fasten_quality_filter.rs"

[[bin]]
name = "fasten_trim"
path = "src/bin/fasten_trim.rs"

[[bin]]
name = "fasten_combine"
path = "src/bin/fasten_combine.rs"

[[bin]]
name = "fasten_kmer"
path = "src/bin/fasten_kmer.rs"

[[bin]]
name = "fasten_pe"
path = "src/bin/fasten_pe.rs"

[[bin]]
name = "fasten_convert"
path = "src/bin/fasten_convert.rs"

[[bin]]
name = "fasten_straighten"
path = "src/bin/fasten_straighten.rs"

[[bin]]
name = "fasten_metrics"
path = "src/bin/fasten_metrics.rs"

[[bin]]
name = "fasten_clean"
path = "src/bin/fasten_clean.rs"

[[bin]]
name = "fasten_shuffle"
path = "src/bin/fasten_shuffle.rs"

[[bin]]
name = "fasten_randomize"
path = "src/bin/fasten_randomize.rs"

[[bin]]
name = "fasten_sample"
path = "src/bin/fasten_sample.rs"

[[bin]]
name = "fasten_validate"
path = "src/bin/fasten_validate.rs"

[[bin]]
name = "fasten_inspect"
path = "src/bin/fasten_inspect.rs"

[[bin]]
name = "fasten_repair"
path = "src/bin/fasten_repair.rs"

[[bin]]
name = "fasten_progress"
path = "src/bin/fasten_progress.rs"

[[bin]]
name = "fasten_sort"
path = "src/bin/fasten_sort.rs"

[[bin]]
name = "fasten_normalize"
path = "src/bin/fasten_normalize.rs"

[dependencies]
regex        = "1.10"
fancy-regex  = "0.13"
getopts      = "0.2.21"
statistical  = "1.0"
multiqueue   = "0.3.2"
rand         = "0.8"
fastq        = "0.6"
threadpool   = "1.8.1"
bam          = "0.1.4"
